refactor(geometry): 更新集合访问方法以提高代码清晰度
- 将 controlPoints.get(0) 替换为 controlPoints.getFirst()
- 将 verts.get(0) 和 verts.get(verts.size() - 1) 替换为 verts.getFirst() 和 verts.getLast()
- 修正 buildCumulative 方法的返回类型注解位置
- 将